cmake_minimum_required(VERSION 3.0)
PROJECT (HELLO)

ADD_SUBDIRECTORY(src)
MESSAGE(STATUS "this is binary dir" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "this is source dir" ${PROJECT_SOURCE_DIR})

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)
INSTALL(TARGETS main RUNTIME DESTINATION bin)
INSTALL(FILES COPYRIGHT README DESTINATION doc)